--- a/content/post/2021-06-07-do-schools-discriminate-against-night-owls-inference-on-clustered-data-part-3/index.en.Rmd
+++ b/content/post/2021-06-07-do-schools-discriminate-against-night-owls-inference-on-clustered-data-part-3/index.en.Rmd
@@ -348,8 +348,6 @@ fit_null_tl <- lmerModList(Grade ~ 1 + (1 | Class/stud_ID),
 fastdisp(fit_null_tl)
 ```
 
-If we add up the squared sd's (i.e. the variance) of all three levels we see that the total variance has increased. This is impossible of course. So it due to the fact that we are estimating the population variance, where, again, lower level variation can inflate the variation observed at the higher level. 
-
 In order to arrive at the author's model we add a forth level, consisting of the Level (havo/vwo) of the students. It is debatable whether these levels are exchangeable though. That is, we need to believe clusters are similar, so that it makes sense to set up a probability distribution for them (i.e. to treat them as 'random', in the frequentist lingo). Of course, this objection would apply to treating classes as exchangeable just as much.
 
 We also include the explanatory variables that the authors settled upon. These variables were featured in a model that was the winner of a competition of nine models, that was decided by looking at their AIC scores. Fitting several models is better than one model. But why nine models and not ten or twenty? In response to these questions, a new trend in running regressions is to specify all possible models and look at the [specification curve](https://www.nature.com/articles/s41562-020-0912-z#:~:text=The%20descriptive%20specification%20curve%20serves,decisions%20are%20the%20most%20consequential.) of tens of thousands of specifications. I hope to pursue this line of analysis in a future post. 
@@ -412,17 +410,20 @@ p2 <- as.ggplot(plotREsim(reEx, facet= list(groupFctr= "Class", term= "MSFsc")))
 p2
 ```
 
-But the instructive point of the first, faceted diagram is that all the slopes are significantly different from zero (since they are black) even though they are hugging the horizontal line at 0. In other words, we have so many observations (grades), that the confidence interval is tiny, so as to be invisible. 
+But the instructive point of the first, faceted diagram is that all the slopes are significantly different from zero (since they are black) even though they are hugging the horizontal line at 0. In other words, we have so many observations that the confidence interval is tiny, so as to be invisible. 
 
 This raises the question of how much shrinkage takes place in the multilevel model. Multilevel regression tries to find the sweet spot between pooled and unpooled regression. If there are very few observations per group, then the estimates inside the groups will be very similar to the estimates for the entire population. On the other hand, if there are a lot of observations in the groups, then the grand parameters will have a hard time pulling group parameters towards them. The latter may be the case here. Do does multilevel regression even make a difference here, given the huge number of observations? 
 
 To that end we first estimate the regression lines separately for every class. We then pull the estimates of the multilevel model out of the lme4 object and add the relevant fixed and random parts together to get the multilevel estimates for the regression line per group. We won't show uncertainty estimates here, because what we care about here is the amount of pull towards the unpooled estimates. So let's see what happens. 
 
 ```{r}
+# CREATE DF OF POOLED REGRESSION COEFS
+
+#function of the model
 MSF_model <- function(df) {
   lm(Grade ~ 1 + MSFsc, data = df)
 }
-
+# loop over the groups
 pooled_coefs <- list()
 for(i in seq_along(levels(a.out$imputations[[1]]$Class))){
   pooled_coefs[[i]] <- a.out$imputations[[1]] %>% 
@@ -432,9 +433,9 @@ for(i in seq_along(levels(a.out$imputations[[1]]$Class))){
     filter(term %in% c("(Intercept)","MSFsc")) %>% 
     dplyr::select(term,estimate)
 }
-
+# pull the class names
 classes <- scores %>% pull(Class) %>% levels()
-
+# stuff everything into a df
 pooled_coefs_df <- map_dfr(pooled_coefs,`[`, c("term", "estimate")) %>% 
   group_by(term) %>%
   mutate(row = row_number()) %>%
@@ -443,22 +444,24 @@ pooled_coefs_df <- map_dfr(pooled_coefs,`[`, c("term", "estimate")) %>%
   mutate(classes = classes) %>% 
   dplyr::select(classes, everything())
 
-# From ranef model
+# CREATE A DF OF MULTILEVEL REGRESSION COEFS
+
+#pull slopes and intercepts
 class_re <- ranef(fit_4)$Class[[2]]
 total_sl <- summary(fit_4)$coefficients[2]
-
 multilevel_slopes <- total_sl + class_re 
 
 class_re_int <- ranef(fit_4)$Class[[1]]
 total_sl_int <- summary(fit_4)$coefficients[1]
-
 multilevel_intercepts <- class_re_int + total_sl_int 
-
-# add together in tibble
+# add together in df
 classes <- scores %>% pull(Class) %>% levels()
 df_multilevel <- tibble(classes,multilevel_intercepts, multilevel_slopes)
 
 
+# PLOT BOTH REGRESSION LINES PER GROUP
+
+# some text to tell the lines apart
 dat_text <- data.frame(
   label = "Multilevel",
   classes   = "1h3"
@@ -467,8 +470,7 @@ dat_text2 <- data.frame(
   label = "Pooled",
   classes   = "1h3"
 )
-
-# plot, facet grid by class
+# the actual plot
   ggplot() +
   scale_y_continuous(limits=c(4,8)) +
   scale_x_continuous(limits=c(0,8)) +
