--- a/content/post/2021-06-07-do-schools-discriminate-against-night-owls-inference-on-clustered-data-part-3/index.en.Rmd
+++ b/content/post/2021-06-07-do-schools-discriminate-against-night-owls-inference-on-clustered-data-part-3/index.en.Rmd
@@ -412,21 +412,21 @@ p2
 
 But the instructive point of the first, faceted diagram is that all the slopes are significantly different from zero (since they are black) even though they are hugging the horizontal line at 0. In other words, we have so many observations that the confidence interval is tiny, so as to be invisible. 
 
-This raises the question of how much shrinkage takes place in the multilevel model. Multilevel regression tries to find the sweet spot between pooled and unpooled regression. If there are very few observations per group, then the estimates inside the groups will be very similar to the estimates for the entire population. On the other hand, if there are a lot of observations in the groups, then the grand parameters will have a hard time pulling group parameters towards them. The latter may be the case here. Do does multilevel regression even make a difference here, given the huge number of observations? 
+This raises the question of how much shrinkage takes place in the multilevel model. Multilevel regression tries to find the sweet spot between pooled and unpooled regression. If there are very few observations per group, then the estimates inside the groups will be very similar to the estimates for the entire population. On the other hand, if there are a lot of observations in the groups, then the grand parameters will have a hard time pulling group parameters towards them. The latter may be the case here. Do does multilevel regression even make a difference here, given the large number of observations? 
 
 To that end we first estimate the regression lines separately for every class. We then pull the estimates of the multilevel model out of the lme4 object and add the relevant fixed and random parts together to get the multilevel estimates for the regression line per group. We won't show uncertainty estimates here, because what we care about here is the amount of pull towards the unpooled estimates. So let's see what happens. 
 
 ```{r}
-# CREATE DF OF POOLED REGRESSION COEFS
+# CREATE DF OF UNPOOLED REGRESSION COEFS
 
 #function of the model
 MSF_model <- function(df) {
   lm(Grade ~ 1 + MSFsc, data = df)
 }
 # loop over the groups
-pooled_coefs <- list()
+unpooled_coefs <- list()
 for(i in seq_along(levels(a.out$imputations[[1]]$Class))){
-  pooled_coefs[[i]] <- a.out$imputations[[1]] %>% 
+  unpooled_coefs[[i]] <- a.out$imputations[[1]] %>% 
     filter(Class %in% c(levels(Class)[i])) %>% 
     MSF_model %>% 
     tidy %>% 
@@ -436,7 +436,7 @@ for(i in seq_along(levels(a.out$imputations[[1]]$Class))){
 # pull the class names
 classes <- scores %>% pull(Class) %>% levels()
 # stuff everything into a df
-pooled_coefs_df <- map_dfr(pooled_coefs,`[`, c("term", "estimate")) %>% 
+unpooled_coefs_df <- map_dfr(unpooled_coefs,`[`, c("term", "estimate")) %>% 
   group_by(term) %>%
   mutate(row = row_number()) %>%
   tidyr::pivot_wider(names_from = term, values_from = estimate) %>%
@@ -467,7 +467,7 @@ dat_text <- data.frame(
   classes   = "1h3"
 )
 dat_text2 <- data.frame(
-  label = "Pooled",
+  label = "Unpooled",
   classes   = "1h3"
 )
 # the actual plot
@@ -478,12 +478,12 @@ dat_text2 <- data.frame(
     slope=multilevel_slopes,
     intercept=multilevel_intercepts),
     color="darkblue") +
-  geom_abline(data=pooled_coefs_df,aes(
+  geom_abline(data=unpooled_coefs_df,aes(
       slope=MSFsc,
       intercept=`(Intercept)`), color="pink") +
     facet_wrap(vars(classes)) +
     labs(x="chronotype", y="Grade") +
-    ggtitle("Multilevel and pooled regression lines per class") +
+    ggtitle("Multilevel and unpooled regression lines per class") +
       geom_text(
       data    = dat_text,
       color = "darkblue",
